# Slicer

./: .env  .gitignore  README.md  contour_auto.csv  flake.nix
CMake/: SlicerPackageAndUploadTarget.cmake
SuperBuild/: External_OpenSSL.cmake  External_tbb.cmake
helper/02-develop/: 01_import_stl.py  01_slicer_vtk.py  01_slicer_vtk_no_endpoints.py  02_model_to_segment.py  03_demo_for_slicer_extract_contour_csv.py  centerline.csv  contour_auto.csv  contour_s1_a.csv  contour_s1_b.csv  generate_basic_contour_csv.py  slicer_extract_contour_csv_no_endpoints.py  slicer_generate_vtl3d_csv.py  slicer_info.py  slicer_info.txt  声道CSV提取方法.tex
helper/help01/: 01_vtl3d_fem_core_analysis.aux  01_vtl3d_fem_core_analysis.out  01_vtl3d_fem_core_analysis.tex  01_vtl3d_fem_core_analysis.toc
helper/helper02/: 01-reading.txt
helper/helper02/01-doc/: 01-reading.txt  02-分析平面波的截止频率.aux  02-分析平面波的截止频率.out  02-分析平面波的截止频率.tex  02-分析平面波的截止频率.toc  plane_wave_limit_clean.aux  plane_wave_limit_clean.out  plane_wave_limit_clean.tex  plane_wave_limit_clean.toc
helper/helper02/02-code/: compare.txt  cyl_transfer.py  multimode_circle.py  readme.txt  tube_transfer_compare.py
helper/helper03/: 02-ex-csv-gui.py
miniSlicer/: BUILD.md  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  README.md
miniSlicer/Applications/: CMakeLists.txt
miniSlicer/Applications/miniSlicerApp/: CMakeLists.txt  Main.cxx  qminiSlicerAppMainWindow.cxx  qminiSlicerAppMainWindow.h  qminiSlicerAppMainWindow_p.h  slicer-application-properties.cmake
miniSlicer/Applications/miniSlicerApp/Widgets/: qAppStyle.cxx  qAppStyle.h
miniSlicer/LanguageTools/Resources/UI/: LanguageTools.ui
miniSlicer/Modules/Scripted/Home/: Home.py
miniSlicer/Modules/Scripted/Home/Resources/: Home.qss
miniSlicer/Modules/Scripted/VTL3dBridge/: CMakeLists.txt  VTL3dBridge.py
miniSlicer/Slicer/: CMakeLists.txt  README.md  flake.nix
miniSlicer/Slicer-SurfaceWrapSolidify/SegmentEditorWrapSolidify/SegmentEditorWrapSolidifyLib/: SegmentEditorEffect.ui
miniSlicer/Slicer/CMake/: SlicerBlockInstallQtTools.cmake  SlicerBlockInstallTBB.cmake  SlicerMacroGetOperatingSystemArchitectureBitness.cmake
miniSlicer/Slicer/Libs/MRML/Widgets/: qMRMLTreeView.cxx
miniSlicer/Slicer/Modules/Loadable/: CMakeLists.txt
miniSlicer/Slicer/Modules/Loadable/VTL3dViewer/: CMakeLists.txt  qSlicerVTL3dViewerModule.cxx  qSlicerVTL3dViewerModule.h  qSlicerVTL3dViewerModuleWidget.cxx  qSlicerVTL3dViewerModuleWidget.h  vtkSlicerVTL3dViewerModuleLogic.cxx  vtkSlicerVTL3dViewerModuleLogic.h
miniSlicer/Slicer/Modules/Loadable/VTL3dViewer/VTL3D_1.0/: Acoustic3dPage.cpp  Acoustic3dPage.h  AnalysisResultsDialog.cpp  AnalysisSettingsDialog.cpp  AnnotationDialog.cpp  AnnotationDialog.h  Application.cpp  AreaFunctionPicture.cpp  AreaFunctionWidget.cpp  AreaFunctionWidget.h  CMakeLists.txt  Data.cpp  Data.h  EmaConfigDialog.cpp  EmaConfigDialog.h  Graph.cpp  MainWindow.cpp  ParamSimu3DDialog.cpp  SignalComparisonPicture.cpp  SignalPage.cpp  SignalPage.h  SignalPicture.cpp  SimpleSpectrumPicture.cpp  SpectrogramPlot.h  SynthesisThread.cpp  TdsPage.cpp  TdsTimeSignalPicture.cpp  TdsTimeSignalPicture.h  TdsTubePicture.cpp  TdsTubePicture.h  TimeAxisPicture.cpp  TimeAxisPicture.h  TransitionDialog.cpp  VTL3dFactory.cpp  VTL3dFactory.h  VocalTractDialog.cpp  VocalTractDialog.h  VocalTractPage.cpp  VocalTractPage.h  VocalTractPicture.h  (+2 more)
miniSlicer/Slicer/Modules/Loadable/VTL3dViewer/VTL3D_1.0/Backend/: Acoustic3dSimulation.cpp  SoundSpeed.h
miniSlicer/Slicer/SuperBuild/: External_CTKAPPLAUNCHER.cmake  External_VMTK.cmake  External_tbb.cmake
miniSlicer/SlicerExtension-VMTK/: CMakeLists.txt
miniSlicer/SlicerExtension-VMTK/ArterialCalcificationPreProcessor/Resources/UI/: ArterialCalcificationPreProcessor.ui
miniSlicer/SlicerExtension-VMTK/BranchClipper/Resources/UI/: qSlicerBranchClipperModuleWidget.ui  qSlicerBranchClipperWidget.ui
miniSlicer/SlicerExtension-VMTK/CenterlineDisassembly/Resources/UI/: CenterlineDisassembly.ui
miniSlicer/SlicerExtension-VMTK/ClipVessel/Resources/UI/: ClipVessel.ui
miniSlicer/SlicerExtension-VMTK/CrossSectionAnalysis/Resources/UI/: CrossSectionAnalysis.ui
miniSlicer/SlicerExtension-VMTK/EditCenterline/Resources/UI/: EditCenterline.ui
miniSlicer/SlicerExtension-VMTK/ExtractCenterline/: ExtractCenterline.py
miniSlicer/SlicerExtension-VMTK/ExtractCenterline/Resources/UI/: ExtractCenterline.ui
miniSlicer/SlicerExtension-VMTK/SuperBuild/: External_VMTK.cmake
miniSlicer/SlicerSurfaceToolbox/DynamicModeler/Logic/: vtkSlicerDynamicModelerHollowTool.cxx  vtkSlicerDynamicModelerHollowTool.h
miniSlicer/VTL3D_1.0/: Acoustic3dPage.cpp  Acoustic3dPage.h  AnalysisSettingsDialog.h  AnatomyParamsDialog.cpp  AnatomyParamsDialog.h  CMakeLists.txt  GesturalScorePage.cpp  GesturalScorePage.h  GesturalScorePicture.cpp  GesturalScorePicture.h  MainWindow.cpp  MainWindow.h  PropModesPicture.cpp  SignalComparisonPicture.h  SignalPicture.h  SimpleSpectrumPicture.h  SpectrogramPicture.cpp  SpectrogramPicture.h  SpectrogramPlot.cpp  SynthesisThread.h  TdsPage.h  TdsSpatialSignalPicture.cpp  TdsSpatialSignalPicture.h  VocalTractDialog.cpp
miniVTL3D/sources/: Acoustic3dPage.cpp  MainWindow.cpp  ParamSimu3DDialog.cpp  ParamSimu3DDialog.h  SegmentsPicture.cpp  Spectrum3dPicture.cpp  Spectrum3dPicture.h  SpectrumPicture.cpp  VocalTractShapesDialog.cpp  VocalTractShapesDialog.h
miniVTL3D/sources/Backend/: Acoustic3dSimulation.cpp  Acoustic3dSimulation.h  CrossSection2d.h
nix/: shells.nix
nix/modules/: vtl3d-gui.nix  wxqt.nix
pkgs/: wxgtk-2.8.12.nix
script/: 01_generate_placeholders.py  01b_build_prompt.py  02_translate_with_openai.py  03_apply_translations.py  04_fix_placeholders.py  05-monitor-api.py  06_fix_xml_decl.py  Makefile  choose_rules_helper.py  prompt_global_header.txt  rules.yaml
script/doc/: localization_pipeline_whitepaper.aux  localization_pipeline_whitepaper.out  localization_pipeline_whitepaper.tex  ui_translation_pipeline.aux  ui_translation_pipeline.md  ui_translation_pipeline.out  ui_translation_pipeline.tex
(+160 files in other folders)
